--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
             </div>
         </span>
     </div>
-    <div class="sports-col snowboard-image">
+    <div [routerLink]="['/snowboard']" class="sports-col snowboard-image">
         <span class="mt-12 mx-auto">
             <div class="info">
                 <button>Snowboard</button>
