--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,10 +7,10 @@
     @apply font-sans text-2xl h-20 sticky top-0 z-50 bg-white px-16 flex flex-row items-center justify-between;
   }
   .header .header-link {
-    @apply flex-initial text-center
+    @apply flex-initial text-center;
   }
   .header .header-title {
-    @apply text-left
+    @apply text-left cursor-pointer;
   }
   .footer {
     @apply flex flex-row justify-between bg-black h-40 text-white items-center px-8 mt-2;
