--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="header">
   <div [routerLink]="['/']" class="header-link header-title">Snowcamp</div>
-  <div class="header-link">Cross-country</div>
-  <div class="header-link">Downhill</div>
-  <div class="header-link">Snowboard</div>
+  <div [routerLink]="['/cross-country']" class="header-link">Cross-country</div>
+  <div [routerLink]="['/downhill']" class="header-link">Downhill</div>
+  <div [routerLink]="['/snowboard']" class="header-link">Snowboard</div>
   <div class="header-link flex">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 ml-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
