--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div [routerLink]="['/']" class="header-link header-title">Snowcamp</div>
+  <div [routerLink]="['/']" class="header-link header-title">Snowshop</div>
   <div [routerLink]="['/cross-country']" class="header-link">Cross-country</div>
   <div [routerLink]="['/downhill']" class="header-link">Downhill</div>
   <div [routerLink]="['/snowboard']" class="header-link">Snowboard</div>
