Rollback to start of the tp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
 <div class="footer">
   <div>
-      ©2021 — In place since 2021
+      ©2021 — Here since 2021
   </div>
   <div class="flex items-center">
       <span>Social Networks</span>
