--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,5 @@
-<div class="header">
-  <div [routerLink]="['/']" class="header-link header-title">Snowshop</div>
-  <div [routerLink]="['/cross-country']" class="header-link">Cross-country</div>
-  <div [routerLink]="['/downhill']" class="header-link">Downhill</div>
-  <div [routerLink]="['/snowboard']" class="header-link">Snowboard</div>
-  <div class="header-link flex">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 ml-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-    </svg>
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 ml-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-    </svg>
-  </div>
-</div>
+<shell-header></shell-header>
 
 <router-outlet></router-outlet>
 
-<div class="footer">
-  <div>
-      ©2021 — Here since 2021
-  </div>
-  <div class="flex items-center">
-      <span>Social Networks</span>
-      <span class="px-1">
-          <img class="h-6 w-6" src="assets/icon/facebook-logo.png" />
-      </span>
-      <span class="px-1">
-          <img class="h-6 w-6" src="assets/icon/instagram-logo.png" />
-      </span>
-      <span class="px-1">
-          <img class="h-6 w-6" src="assets/icon/twitter-logo.png" />
-      </span>
-      <span class="px-1">
-          <img class="h-6 w-6" src="assets/icon/youtube-logo.png" />
-      </span>
-  </div>
-</div>
+<shell-footer></shell-footer>
